--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -81,4 +81,6 @@
     <color name="ribbonTextCritical">#FFFFFF</color>
 
     <color name="ic_launcher_background">#424242</color>
+    <color name="bgfitbelow">#ff0000</color>
+    <color name="bgfitabove">#00FF00</color>
 </resources>
