--- a/app/src/main/res/xml/pref_hypopredictor.xml
+++ b/app/src/main/res/xml/pref_hypopredictor.xml
@@ -17,30 +17,8 @@
             validate:floatminNumber="0.0"
             validate:testType="floatNumericRange" />
 
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="@string/key_hypoppred_24hwindow"
-            android:title="@string/hypoppred_24hwindow_title"
-            android:summary="@string/hypoppred_24hwindow_summary"/>
-
-        <info.nightscout.androidaps.plugins.general.monitors.TimePreference
-            android:defaultValue="0"
-            android:dependency="@string/key_hypoppred_24hwindow"
-            android:title="@string/hypoppred_window_from"
-            android:key="@string/key_hypoppred_window_from"
-            android:summary="@string/hypoppred_window_from_summary"
-            />
-
-        <info.nightscout.androidaps.plugins.general.monitors.TimePreference
-            android:defaultValue="24"
-            android:dependency="@string/key_hypoppred_24hwindow"
-            android:title="@string/hypoppred_window_to"
-            android:key="@string/key_hypoppred_window_to"
-            android:summary="@string/hypoppred_window_to_summary"
-            />
-
         <com.andreabaccega.widget.ValidatingEditTextPreference
-            android:defaultValue="12"
+            android:defaultValue="15"
             android:summary="@string/hypoppred_horizon_summary"
             android:digits="0123456789"
             android:inputType="number"
@@ -52,6 +30,28 @@
             validate:maxNumber="120"
             validate:minNumber="15"
             validate:testType="numericRange" />
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/key_hypoppred_24hwindow"
+            android:title="@string/hypoppred_24hwindow_title"
+            android:summary="@string/hypoppred_24hwindow_summary"/>
+
+        <info.nightscout.androidaps.plugins.general.bgmonitors.TimePreference
+            android:defaultValue="0"
+            android:dependency="@string/key_hypoppred_24hwindow"
+            android:title="@string/hypoppred_window_from"
+            android:key="@string/key_hypoppred_window_from"
+            android:summary="@string/hypoppred_window_from_summary"
+            />
+
+        <info.nightscout.androidaps.plugins.general.bgmonitors.TimePreference
+            android:defaultValue="24"
+            android:dependency="@string/key_hypoppred_24hwindow"
+            android:title="@string/hypoppred_window_to"
+            android:key="@string/key_hypoppred_window_to"
+            android:summary="@string/hypoppred_window_to_summary"
+            />
 
         <com.andreabaccega.widget.ValidatingEditTextPreference
             android:defaultValue="0.0"
@@ -117,6 +117,12 @@
 
         </PreferenceScreen>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="hypoppred_alert"
+        android:title="@string/hypoppred_alert_settings">
+
         <com.andreabaccega.widget.ValidatingEditTextPreference
             android:defaultValue="0.0"
             android:summary="@string/hypoppred_threshold_alert_summary"
@@ -129,5 +135,20 @@
             validate:floatminNumber="0.0"
             validate:testType="floatNumericRange" />
 
+        <com.andreabaccega.widget.ValidatingEditTextPreference
+            android:defaultValue="20"
+            android:summary="@string/hypoppred_alert_horizon_summary"
+            android:digits="0123456789"
+            android:inputType="number"
+            android:key="@string/key_hypoppred_alert_horizon"
+            android:maxLines="1"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/hypoppred_alert_horizon"
+            validate:maxNumber="30"
+            validate:minNumber="0"
+            validate:testType="numericRange" />
+
     </PreferenceCategory>
+
 </PreferenceScreen>
