--- a/app/src/main/res/layout/maintenance_fragment.xml
+++ b/app/src/main/res/layout/maintenance_fragment.xml
@@ -24,6 +24,19 @@
             android:textColor="@color/colorTreatmentButton" />
 
        <Button
+            android:id="@+id/log_view"
+            style="?android:attr/buttonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_weight="0.5"
+            android:text="@string/view_log"
+            android:textColor="@color/colorTreatmentButton" />
+
+        <Button
             android:id="@+id/log_send"
             style="?android:attr/buttonStyle"
             android:layout_width="fill_parent"
