--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="logcat_floating_bg">#c02a2a2a</color>
+    <color name="white">#fff</color>
+    <color name="grey">#bbb</color>
+    <color name="logcat_fatal">#9C27B0</color>
+    <color name="logcat_debug">#2196F3</color>
+    <color name="logcat_error">#F44336</color>
+    <color name="logcat_info">#4CAF50</color>
+    <color name="logcat_verbose">#BBBBBB</color>
+    <color name="logcat_warning">#FFC107</color>
+
     <color name="prediction">#ff00ff</color>
     <color name="basal">#00ffff</color>
     <color name="iob">#1e88e5</color>
