--- a/app/src/main/res/layout/careportal_fragment.xml
+++ b/app/src/main/res/layout/careportal_fragment.xml
@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="5dp"
+    android:background="#000000"
     tools:context=".plugins.general.careportal.CareportalFragment">
 
 
