--- a/app/src/main/res/layout/openapsama_fragment.xml
+++ b/app/src/main/res/layout/openapsama_fragment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="2dp"
+    android:background="#000000"
     tools:context=".plugins.aps.openAPSAMA.OpenAPSAMAFragment">
 
     <ScrollView
