--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".plugins.general.overview.OverviewFragment">
 
     <RelativeLayout
@@ -32,7 +33,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingTop="2dp">
+                    android:paddingTop="2dp"
+                    >
 
                     <TextView
                         android:id="@+id/overview_apsmode"
@@ -415,6 +417,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="5dp">
+
+
 
                 <info.nightscout.androidaps.utils.SingleClickButton
                     android:id="@+id/overview_treatmentbutton"
