--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,6 +15,10 @@
         app:showAsAction="never"
         android:title="@string/nav_historybrowser" />
     <item
+        android:id="@+id/nav_historyviewer"
+        app:showAsAction="never"
+        android:title="@string/nav_historyviewer" />
+    <item
         android:id="@+id/nav_setupwizard"
         app:showAsAction="never"
         android:title="@string/nav_setupwizard" />
