--- a/app/src/main/res/layout/activity_statebrowser.xml
+++ b/app/src/main/res/layout/activity_statebrowser.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.nightscout.androidaps.plugins.general.stateviewer.StateDataActivity">
+    tools:context="info.nightscout.androidaps.plugins.hm.stateviewer.StateDataActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
