--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,5 +92,5 @@
 
     <color name="ic_launcher_background">#424242</color>
     <color name="bgfitbelow">#ff0000</color>
-    <color name="bgfitabove">#00FF00</color>
+    <color name="bgfitabove">#ca77dd</color>
 </resources>
