--- a/app/src/main/res/layout/overview_fragment_smallheight.xml
+++ b/app/src/main/res/layout/overview_fragment_smallheight.xml
@@ -151,6 +151,13 @@
                         android:layout_marginLeft="10dp"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+                    <TextView
+                        android:id="@+id/overview_sage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="0.25"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </LinearLayout>
 
