--- a/app/src/main/res/layout/overview_fragment_smallheight.xml
+++ b/app/src/main/res/layout/overview_fragment_smallheight.xml
@@ -132,7 +132,7 @@
                         android:id="@+id/overview_timeago"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_weight="0.25"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -140,7 +140,7 @@
                         android:id="@+id/overview_delta"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_weight="0.25"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -148,14 +148,21 @@
                         android:id="@+id/overview_sage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_weight="0.25"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <TextView
+                        android:id="@+id/overview_hba1clow"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
                         android:layout_weight="0.25"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
                     <TextView
                         android:id="@+id/overview_insulinleft"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_weight="0.25"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
