--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -135,17 +135,33 @@
                         android:gravity="top"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/overview_timeago"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_weight="0.25"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textSize="10sp"/>
+                            android:gravity="center_horizontal"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/overview_timeago"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:layout_weight="0.25"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textSize="10sp"/>
+
+                            <TextView
+                                android:id="@+id/overview_delta"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:layout_weight="0.25"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
 
                         <TextView
-                            android:id="@+id/overview_delta"
+                            android:id="@+id/overview_hba1c"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="8dp"
@@ -163,15 +179,6 @@
                             android:textSize="10sp"/>
 
                         <TextView
-                            android:id="@+id/overview_hba1c"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_weight="0.25"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textSize="10sp"/>
-
-                        <TextView
                             android:id="@+id/overview_insulinleft"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -180,6 +187,14 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textSize="10sp"/>
 
+                        <TextView
+                            android:id="@+id/overview_pumpbatterylevel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_weight="0.25"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="10sp"/>
 
                     </LinearLayout>
 
