--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/nav_plugin_preferences"
         app:showAsAction="never"
         android:title="@string/nav_plugin_preferences" />
-    <item
+    <!--item
         android:id="@+id/nav_historybrowser"
         app:showAsAction="never"
-        android:title="@string/nav_historybrowser" />
+        android:title="@string/nav_historybrowser" /-->
     <item
         android:id="@+id/nav_stateviewer"
         app:showAsAction="never"
